save all changes

--- a/assets/index.css
+++ b/assets/index.css
@@ -67,7 +67,7 @@ a:hover{
 
 
 .logo h1 {
-    font-size: 32px;
+    font-size: 2rem;
     font-family: 'Soria', serif;
     margin: 0;
     font-weight: 500;
