--- a/assets/index.css
+++ b/assets/index.css
@@ -46,6 +46,20 @@ body{
   list-style: none;
 }
 
+.hamburger {
+  display: none;
+  flex-direction: column;
+  cursor: pointer;
+}
+
+.hamburger span {
+  height: 0.0625rem;
+  width: 1.0875rem;
+  background: black;
+  margin: 0.02rem 0;
+  transition: 0.3s;
+}
+
 /* .container-fluid{
     
     width: 100vw;
@@ -67,7 +81,7 @@ a:hover{
 
 
 .logo h1 {
-    font-size: 2rem;
+    font-size: 2%rem;
     font-family: 'Soria', serif;
     margin: 0;
     font-weight: 500;
@@ -108,21 +122,39 @@ a:hover{
     transform: translate(-50%, -50%);
 }
 
-@media (max-width: 768px) {
-  .navbar {
+@media screen and (max-width: 600px) {
+  .navlinks {
+    display: none;
+  }
+
+  .logo h1 {
+    font-size: small;
+  }
+
+  .hamburger {
+    display: block;
+    float: right;
+  }
+
+  .navbar.responsive {
+    position: relative;
     flex-direction: column;
     align-items: flex-start;
   }
 
-  .nav-links {
-    flex-direction: column;
+  .navbar.responsive a{
+    float: none;
     width: 100%;
-    gap: 1rem;
-    margin-top: 1rem;
+    text-align: left;
   }
 
-  .nav-links a {
-    font-size: 1.1rem;
+  .navbar.responsive .navlinks{
+    display: block;
+    width: 100%;
+  }
+
+  .navlinks a {
+    font-size: small;
   }
 }
 
@@ -180,7 +212,7 @@ li:hover{
 .header-social-links{
     position: absolute;
     top: 40%;
-    right: 1.rem;
+    right: 0;
 }
 
 
@@ -467,7 +499,7 @@ h3{
 
 .about-main{
     padding: 2rem;
-    margin-top: 3rem;
+    margin-top: 5rem;
 }
 
 
